IE text truncation fix and general round numbers css fix

--- a/css/hpit.css
+++ b/css/hpit.css
@@ -970,7 +970,7 @@ img {
 	display: inline-block;
 	width: 100%;
 	float: left;
-	line-height: 24px;
+	line-height: 28px;
 	font-size: 24px;
 	font-weight: normal;
 }
